<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="55dp"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/first_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/exitBtnContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/idExitText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_text"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/withe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <info.androidhive.fontawesome.FontTextView
                    android:id="@+id/fontAwesomeExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/fa_sign_out_alt_solid"
                    android:textColor="@color/withe"
                    android:textSize="@dimen/size_icons2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/idExitText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:solid_icon="true"
                    tools:ignore="SpUsage" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/welcome_message"
                android:textAppearance="@style/TextAppearance.Headline5"
                android:textColor="@color/withe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.Headline5.Bold"
                android:textColor="@color/withe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"
                tools:text="@string/user_name_tools" />

            <ImageView
                android:id="@+id/intercamLogo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/company_img"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />


            <ImageButton
                android:id="@+id/editProfilePicture"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_edit"
                android:contentDescription="@string/profile_editor"
                app:layout_constraintStart_toEndOf="@+id/intercamLogo"
                app:layout_constraintTop_toTopOf="@+id/intercamLogo" />


            <TextView
                android:id="@+id/txtCurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textColor="@color/text_color_emphasis_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="29 de Octubre 2020" />

            <TextView
                android:id="@+id/txtThereArePayments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Headline6.Bold"
                android:textColor="@color/text_color_emphasis_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCurrentDate"
                tools:text="Tienes pagos por autorizar:" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filterButtonContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtThereArePayments">


                <!--        check this-->
                <!--        android:drawableStart="@android:drawable/alert_dark_frame"-->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFilter"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_button_filter"
                    android:gravity="center"
                    android:paddingTop="18dp"
                    android:paddingBottom="18dp"
                    android:text="@string/button_filter_text"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/withe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPayments"
                android:layout_width="match_parent"
                android:overScrollMode="never"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/filterButtonContainer" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/supportBtnContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/supportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_text"
            android:textAppearance="@style/TextAppearance.Subtitle1"
            android:textColor="@color/text_color_emphasis_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/fontAwesomeSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/fa_info_circle_solid"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/size_icons2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/supportText"
            app:layout_constraintTop_toTopOf="parent"
            app:solid_icon="true"
            tools:ignore="SpUsage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>